<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.meal.detail.MealDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_heigth_app_bar"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/space_large"
            app:expandedTitleMarginStart="@dimen/space_medium"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_black"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/space_medium"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/contentTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:paddingStart="@dimen/margin_default"
                    android:paddingEnd="@dimen/margin_default"
                    android:text="@string/tags_detail_meal_fragment"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTagsRecipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/line_spacing"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:textColor="@color/black"
                    android:paddingStart="@dimen/margin_default"
                    android:paddingEnd="@dimen/margin_default"
                    android:textSize="@dimen/text_size_small" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitleIngredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:paddingStart="@dimen/margin_default"
                android:paddingEnd="@dimen/margin_default"
                android:text="@string/ingredients_detail_meal_fragment"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRecipeIngredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:paddingStart="@dimen/margin_default"
                android:paddingEnd="@dimen/margin_default"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitleInstruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:paddingStart="@dimen/margin_default"
                android:paddingEnd="@dimen/margin_default"
                android:text="@string/instructions_detail_meal_fragment"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRecipeInstruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:paddingStart="@dimen/margin_default"
                android:paddingEnd="@dimen/margin_default"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitleVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/margin_default"
                android:text="@string/video_detail_meal_fragment"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtubePlayerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_gravity="center"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>